# bond

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/binary/: elf.rs  loader.rs  mod.rs  pe.rs
src/cluster/: detector.rs  fingerprint.rs  mod.rs
src/disasm/: decoder.rs  features.rs  mod.rs
src/encoding/: instruction_encoder.rs  mod.rs
src/htm/: config.rs  mod.rs  pipeline.rs
src/persistence/: mod.rs  model_io.rs
tests/: actionable_analysis.rs  binary_parsing.rs  boundary_detection.rs  corpus_tests.rs  debug_clusters.rs  diagnostic.rs  end_to_end.rs
tests/common/: mod.rs
tests/corpus/: build.sh
tests/corpus/src/: test_mixed.c  test_novel.c  train_control.c  train_functions.c  train_loops.c  train_math.c  train_strings.c
