[package]
name = "bond"
version = "0.1.0"
edition = "2024"
authors = ["null"]
description = "HTM-based binary analysis tool for code sequence clustering"
license = "MIT"

[dependencies]
# HTM implementation
mokosh = "0.1"

# Binary parsing
goblin = "0.10"

# Disassembly
iced-x86 = { version = "1.21", default-features = false, features = ["std", "decoder", "instr_info"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Utilities
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10"
